--- a/index.html
+++ b/index.html
@@ -21,32 +21,6 @@
         <div style="background: red">
             <p id="like-button">This is not a button, but will do the same as a button</p>
         </div>
-        <script>
-function getMyProfession() {
-    let professionElement = document.getElementById('profession');
-    let profession = professionElement.options[professionElement.selectedIndex].text;
-    alert(profession);
-} 
-
-function handlePressEvent(e) {
-    let message = `You press ${e.key}`;
-    if (e.shiftKey) {
-        message += ` and the shift key`
-    }
-    if (e.altKey) {
-        message += ` and the alt key`
-    }
-    if (e.ctrlKey) {
-        message += ` and the ctrl key`
-    }
-    if (e.metaKey) {
-        message += ` and the cmd or meta key`
-    }
-    alert(message);
-}
-let likeButton = document.getElementById('like-button');
-likeButton.addEventListener("click", getMyProfession);
-document.addEventListener("keypress", handlePressEvent);
-        </script>
+        <script src="js/index.js"></script>
     </body>
 </html>
