Add exercise for regular expressions

--- a/index.html
+++ b/index.html
@@ -3,24 +3,14 @@
         <title>Intro to JavaScript</title>
     </head>
     <body>
-        <h1>Forms</h1>
-        <h3>We are going to manipulate Forms with</h3>
+        <h1>Regular Expressions</h1>
+        <h3>We are going to learn about regular expressions</h3>
         <hr>
-        <h3>Me:</h3>
-        <form>
-            <label>Name:</label>
-            <input id="name" value="" />
-            <label>Profession:</label>
-            <select id="profession" value="">
-                <option value="1">Backend Developer</option>
-                <option value="2">DevOps Developer</option>
-                <option value="3">Frontend Developer</option>
-            </select>
-        </form>
-        <button onclick="getMyProfession()">What's my profession?</button>
-        <div style="background: red">
-            <p id="like-button">This is not a button, but will do the same as a button</p>
-        </div>
+        <h3>Regular expressions:</h3>
+        <label>Playground:</label>
+        <input id="playground-text" value=""/>
+        <button id="runner">Run RegExp</button>
+        <button id="replace">Replace</button>
         <script src="js/index.js"></script>
     </body>
 </html>
