--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
         <h3>Regular expressions:</h3>
         <label>Playground:</label>
         <input id="playground-text" value=""/>
+        <label id="error" style="color: red; visibility: hidden;">Your input is not found</label>
         <button id="runner">Run RegExp</button>
+        <label>Finde:</label>
+        <input id="haystack" value="" />
+        <label>Ersetze mit:</label>
+        <input id="replace-with" value="" />
         <button id="replace">Replace</button>
         <script src="js/index.js"></script>
     </body>
